--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,12 @@ jobs:
       - run:
           name: Run tests
           command: make test
+      - run:
+          name: Run tests and coverage
+          command: make coverage
+      - run:
+          name: Upload coverage to Codecov
+          command: bash <(curl -s https://codecov.io/bash)
 #     - store_test_results:
 #         path: /tmp/test-reports
 
